--- a/Lab1/Lab04/index.html
+++ b/Lab1/Lab04/index.html
@@ -1,30 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Login Demo</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lab04 - Login Form</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main class="login-container">
-    <form id="loginForm" novalidate>
-      <h1>Đăng nhập</h1>
-      <label for="username">Username</label>
-      <input id="username" name="username" type="text" required>
-
-      <label for="password">Password</label>
-      <input id="password" name="password" type="password" required minlength="4">
-
-      <label><input id="remember" type="checkbox"> Remember me</label>
-
-      <div class="buttons">
-        <button id="loginBtn" type="submit">Login</button>
-        <button id="cancelBtn" type="button">Cancel</button>
+  <div class="login-container">
+    <h2>Đăng nhập</h2>
+    <form id="loginForm">
+      <div class="form-group">
+        <label for="username">Tên đăng nhập</label>
+        <input type="text" id="username" placeholder="Nhập username..." required>
       </div>
-      <p id="error" aria-live="polite"></p>
+      <div class="form-group">
+        <label for="password">Mật khẩu</label>
+        <input type="password" id="password" placeholder="Nhập password..." required>
+      </div>
+      <button type="submit">Đăng nhập</button>
+      <p id="message"></p>
     </form>
-  </main>
-<script src="js/script.js"></script>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
