--- a/Lab1/Lab04/index.html
+++ b/Lab1/Lab04/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab04 - Login Form</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./Lab04/style.css">
 </head>
 <body>
   <div class="login-container">
@@ -22,6 +22,6 @@
       <p id="message"></p>
     </form>
   </div>
-  <script src="script.js"></script>
+  <script src="./Lab04/script.js"></script>
 </body>
 </html>
