--- a/Lab1/Lab04/index.html
+++ b/Lab1/Lab04/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab04 - Login Form</title>
+  <title>Lab04 - Form Đăng nhập</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,16 +19,21 @@
         <label for="password">Mật khẩu</label>
         <div class="password-wrapper">
           <input type="password" id="password" placeholder="Nhập password..." required>
-          <button type="button" id="togglePassword">👁</button>
+          <span id="togglePassword" class="toggle">&#128065;</span>
         </div>
       </div>
 
-      <div class="form-group remember">
-        <input type="checkbox" id="remember">
-        <label for="remember">Ghi nhớ đăng nhập</label>
+      <div class="form-options">
+        <label>
+          <input type="checkbox" id="remember"> Ghi nhớ đăng nhập
+        </label>
       </div>
 
-      <button type="submit">Đăng nhập</button>
+      <div class="button-group">
+        <button type="submit">Đăng nhập</button>
+        <button type="button" id="cancelBtn">Hủy</button>
+      </div>
+
       <p id="message"></p>
     </form>
   </div>
